syntax = "proto3";

package bar.v1;


service BarService {
    rpc Bar (BarRequest) returns (BarResponse);
}

message BarResponse {
    repeated string names = 1;
}

message BarRequest {
    repeated string names = 1;
}

