syntax = "proto3";

package foo.v1;


service FooService {
    rpc Foo (FooRequest) returns (FooResponse);
}

message FooResponse {
    string name = 1;
    int32 age = 2;
    map<string, string> d = 3;
}

message FooRequest {
    string name = 1;
    int32 age = 2;
    map<string, string> d = 3;
}

