syntax = "proto3";

package fuga.v1;

import "google/protobuf/timestamp.proto";

service FugaService {
    rpc Foo (Request) returns (Response);
}

message Response {
    string name = 1;
    int32 age = 2;
    map<string, string> d = 3;
    oneof m {
      MyMessage m_MyMessage = 4;
      string m_string = 5;
    }
}

message MyMessage {
    string name = 1;
    int32 age = 2;
    oneof o {
      int32 o_int32 = 3;
      google.protobuf.Timestamp o_google_protobuf_Timestamp = 4;
    }
}

message Request {
    string name = 1;
    int32 age = 2;
    map<string, string> d = 3;
    MyMessage m = 4;
}

